# tec-charts.com

./: COD0OPSRAP_20241630000_01D_01H_GIM.INX  COD0OPSRAP_20241840000_01D_01H_GIM.INX  COD0OPSRAP_20241860000_01D_01H_GIM.INX  COD0OPSRAP_20241900000_01D_01H_GIM.INX  COD0OPSRAP_20242140000_01D_01H_GIM.INX  COD0OPSRAP_20242150000_01D_01H_GIM.INX  COD0OPSRAP_20242160000_01D_01H_GIM.INX  COD0OPSRAP_20242180000_01D_01H_GIM.INX  COD0OPSRAP_20242310000_01D_01H_GIM.INX  COD0OPSRAP_20242320000_01D_01H_GIM.INX  COD0OPSRAP_20242330000_01D_01H_GIM.INX  COD0OPSRAP_20242380000_01D_01H_GIM.INX  COD0OPSRAP_20242390000_01D_01H_GIM.INX  COD0OPSRAP_20242430000_01D_01H_GIM.INX  Dockerfile  JPL0OPSRAP_20242140000_01D_02H_GIM.INX  JPL0OPSRAP_20242430000_01D_02H_GIM.INX  README.md  manage.py  pyproject.toml
all_charts/: .netrc  admin.py  apps.py  clodflare.py  forms.py  graph.py  helpers.py  models.py  views.py
all_charts/migrations/: 0001_initial.py  0002_alter_dataforchart_parsed_file_path.py  0003_alter_dataforchart_parsed_file_path.py  0004_remove_dataforchart_parsed_file_path.py
data/IONEX/: COD0OPSFIN_20232130000_01D_01H_GIM.INX
data/JSON/: COD0OPSRAP_20241530000_01D_01H_GIM.json  COD0OPSRAP_20241830000_01D_01H_GIM.json  COD0OPSRAP_20242140000_01D_01H_GIM.json  COD0OPSRAP_20242140000_01D_02H_GIM.json  COD0OPSRAP_20242150000_01D_01H_GIM.json  COD0OPSRAP_20242160000_01D_01H_GIM.json  COD0OPSRAP_20242180000_01D_01H_GIM.json  COD0OPSRAP_20242240000_01D_01H_GIM.json  COD0OPSRAP_20242260000_01D_01H_GIM.json  (+51 more)
requirements/: base.txt
tec_charts/: asgi.py  settings.py  urls.py  wsgi.py
(+8 files in other folders)
