[tool.poetry]
name = "tec-charts"
version = "0.1.0"
description = ""
authors = ["Hanna <hanna.shalamitskaya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
django-crispy-forms = "^2.0"
matplotlib = "^3.7.3"
cartopy = "^0.22.0"
wget = "^3.2"
boto3 = "^1.35.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
